--- a/jedzenie.html
+++ b/jedzenie.html
@@ -77,7 +77,7 @@
       <div class="cntr">
         <div class="h_b_left">
 
-          <a href="html/home_page.html"><img src="img/wschowa.news-logo.png" alt="" class="logo" /></a>
+          <a href="html/index.html"><img src="img/wschowa.news-logo.png" alt="" class="logo" /></a>
 
           <p class="masz">
             Masz newsa ? <br />
@@ -124,7 +124,7 @@
   </header>
   <!-- mobile header -->
   <div class="m_header">
-     <a href="html/home_page.html" class="m_logo"><img src="img/m_logo.png" alt="" /></a>
+     <a href="html/index.html" class="m_logo"><img src="img/m_logo.png" alt="" /></a>
 
     <button class="hamburger_menu">
       <span class="hamburger_box">
