--- a/jedzenie.html
+++ b/jedzenie.html
@@ -197,32 +197,31 @@
       <!-- left -->
       <div class="s_left">
           <div class="bottom_links_txt">
-               <h1>NAPISZ DO NAS </h1>
-               <p>Wschowa.news portal informacji regionalnych <br><br>
-
-                    email: kontakt@wschowa.news
-                    tel: 505 679 562 w godzinach 8:00 - 16:00
-                    <br><br>
-                    Pl. Grunwaldu 16/1
-                    67-400 Wschowa</p>
+               <h1>GASTRONOMIA </h1>
+               <h3>IMBISS </h3>
           </div>
-          <form action="">
-               <h2>FORMULARZ KONTAKTOWY</h2>
-               <span class="form_line"></span>
-               <label for="form_name"> Imię i nazwisko (wymagane)</label>
-               <input type="text" id="form_name" >
-
-               <label for="form_email"> Adres email (wymagane)</label>
-               <input type="text" id="form_email" >
-
-               <label for="form_topic"> Temat</label>
-               <input type="text" id="form_topic" >
-
-               <label for="form_massage"> Treść wiadomości</label>
-               <textarea name="massage" id="form_massage" cols="30" rows="10"></textarea>
-
-               <button><p>WYŚLIJ</p></button>
-          </form>
+          <div class="bottom_links_subpage_img">
+               <img src="img/gastr1.jpg" alt="">
+               <img src="img/gastr2.jpg" alt="">
+          </div>
+          <div class="bottom_links_txt">
+               <h3>TYMFF</h3>
+          </div>
+          <div class="bottom_links_subpage_img">
+               <img src="img/gastr3.jpg" alt="">
+               <img src="img/gastr4.jpg" alt="">
+          </div>
+          <div class="bottom_links_txt">
+               <h3>OAZA</h3>
+          </div>
+          <div class="bottom_links_subpage_img">
+               <img src="img/gastr5.jpg" alt="">
+               <img src="img/gastr6.jpg" alt="">
+          </div>
+          <div class="bottom_links_txt">
+               <h1>UWAGA</h1>
+               <p>Nie ma Twojego menu? Prześlij je nam na adres <a href="#">kontakt@wschowa.news</a></p>
+          </div>
 
    </div>
    <div class="s_bar_vertical1"></div>
