--- a/forum_opinii.html
+++ b/forum_opinii.html
@@ -53,13 +53,15 @@
                <a href="za_miedza.html">ZA MIEDZĄ</a>
              </li>
              <li>
-               <div class="bg9"></div>
+               <div class="bg9" style="height: 100%;"></div>
                <a href="forum_opinii.html">FORUM OPINII - DZIAŁ FELIETONÓW</a>
              </li>
              <li>
-               <div class="bg10" style="height: 100%;"></div>
+               <div class="bg10"></div>
                <a href="kultura_osobista.html">KULTURA OSOBISTA</a>
              </li>
+          
+          
         </ul>
       </div>
       <div class="h_t_right">
@@ -191,8 +193,8 @@
   </div>
   <section class="sec_1">
     <div class="ad"><img src="img/ad1.png" alt="" /></div>
-    <div class="main_headline" style="background-color: #BC46DE;">
-     <h1>KATEGORIA : KULTURA OSOBISTA</h1>
+    <div class="main_headline" style="background-color: #7CD8D1;">
+     <h1>KATEGORIA : FORUM OPINII</h1>
 </div>
 <div class="main">
 
