--- a/single_article.html
+++ b/single_article.html
@@ -21,43 +21,43 @@
                     <ul>
                          <li>
                               <div class="bg1"></div>
-                              <a href="html/wiadomosci.html">WIADOMOŚCI</a>
+                              <a href="wiadomosci.html">WIADOMOŚCI</a>
                          </li>
                          <li>
                               <div class="bg2"></div>
-                              <a href="html/sport.html">SPORT</a>
+                              <a href="sport.html">SPORT</a>
                          </li>
                          <li>
                               <div class="bg3"></div>
-                              <a href="html/kultura.html">KULTURA</a>
+                              <a href="kultura.html">KULTURA</a>
                          </li>
                          <li>
                               <div class="bg4"></div>
-                              <a href="html/oswiata.html">OŚWIATA</a>
+                              <a href="oswiata.html">OŚWIATA</a>
                          </li>
                          <li>
                               <div class="bg5"></div>
-                              <a href="html/patrol.html">PATROL</a>
+                              <a href="patrol.html">PATROL</a>
                          </li>
                          <li>
                               <div class="bg6"></div>
-                              <a href="html/atrakcje.html">ATRAKCJE</a>
+                              <a href="atrakcje.html">ATRAKCJE</a>
                          </li>
                          <li>
                               <div class="bg7"></div>
-                              <a href="html/od_czytelnika.html">OD CZYTELNIKA</a>
+                              <a href="od_czytelnika.html">OD CZYTELNIKA</a>
                          </li>
                          <li>
                               <div class="bg8"></div>
-                              <a href="html/za_miedza.html">ZA MIEDZĄ</a>
+                              <a href="za_miedza.html">ZA MIEDZĄ</a>
                          </li>
                          <li>
                               <div class="bg9"></div>
-                              <a href="html/forum_opinii.html">FORUM OPINII - DZIAŁ FELIETONÓW</a>
+                              <a href="forum_opinii.html">FORUM OPINII - DZIAŁ FELIETONÓW</a>
                          </li>
                          <li>
                               <div class="bg10"></div>
-                              <a href="html/kultura_osobista.html">KULTURA OSOBISTA</a>
+                              <a href="kultura_osobista.html">KULTURA OSOBISTA</a>
                          </li>
                     </ul>
                </div>
@@ -76,7 +76,7 @@
                <div class="cntr">
                     <div class="h_b_left">
 
-                         <a href="html/index.html"><img src="img/wschowa.news-logo.png" alt=""
+                         <a href="index.html"><img src="img/wschowa.news-logo.png" alt=""
                                    class="logo" /></a>
 
                          <p class="masz">
@@ -92,23 +92,23 @@
                          </div>
                          <ul class="hbr_ul">
                               <li>
-                                   <a href="html/miasto.html"><i class="fas fa-map-marked-alt"></i>
+                                   <a href="miasto.html"><i class="fas fa-map-marked-alt"></i>
                                         MIASTO NA SKRÓTY
                                    </a>
                               </li>
                               <li>
-                                   <a href="html/jedzenie.html">
+                                   <a href="jedzenie.html">
                                         <i class="fas fa-utensils"></i>
                                         JEDENIE NA TELEFON
                                    </a>
                               </li>
                               <li>
-                                   <a href="html/reklama.html"><i class="fab fa-adversal"></i>
+                                   <a href="reklama.html"><i class="fab fa-adversal"></i>
                                         REKLAMA
                                    </a>
                               </li>
                               <li>
-                                   <a href="html/kontakt.html"><i class="fas fa-envelope"></i>
+                                   <a href="kontakt.html"><i class="fas fa-envelope"></i>
                                         KONTAKT
                                    </a>
                               </li>
@@ -120,7 +120,7 @@
      </header>
      <!-- mobile header -->
      <div class="m_header">
-          <a href="html/index.html" class="m_logo"><img src="img/m_logo.png" alt="" /></a>
+          <a href="index.html" class="m_logo"><img src="img/m_logo.png" alt="" /></a>
 
           <button class="hamburger_menu">
                <span class="hamburger_box">
@@ -131,46 +131,46 @@
                <div class="nav_m_top">
                     <ul>
                          <li>
-                              <a href="html/wiadomosci.html">WIADOMOŚCI </a>
+                              <a href="wiadomosci.html">WIADOMOŚCI </a>
                          </li>
                          <li>
-                              <a href="html/sport.html">SPORT</a>
+                              <a href="sport.html">SPORT</a>
                          </li>
                          <li>
-                              <a href="html/kultura.html">KULTURA</a>
+                              <a href="kultura.html">KULTURA</a>
                          </li>
                          <li>
-                              <a href="html/oswiata.html">OŚWIATA</a>
+                              <a href="oswiata.html">OŚWIATA</a>
                          </li>
                          <li>
-                              <a href="html/patrol.html">PATROL</a>
+                              <a href="patrol.html">PATROL</a>
                          </li>
                          <li>
-                              <a href="html/atrakcje.html">ATRAKCJE</a>
+                              <a href="atrakcje.html">ATRAKCJE</a>
                          </li>
                          <li>
-                              <a href="html/od_czytelnika.html">OD CZYTELNIKA</a>
+                              <a href="od_czytelnika.html">OD CZYTELNIKA</a>
                          </li>
                          <li>
-                              <a href="html/za_miedza.html">ZA MIEDZĄ</a>
+                              <a href="za_miedza.html">ZA MIEDZĄ</a>
                          </li>
                          <li>
-                              <a href="html/forum_opinii.html">FORUM OPINII</a>
+                              <a href="forum_opinii.html">FORUM OPINII</a>
                          </li>
                          <li>
-                              <a href="html/kultura_osobista.html">KULTURA OSOBISTA</a>
+                              <a href="kultura_osobista.html">KULTURA OSOBISTA</a>
                          </li>
                          <li>
-                              <a href="html/miasto.html"> MIASTO NA SKRÓTY </a>
+                              <a href="miasto.html"> MIASTO NA SKRÓTY </a>
                          </li>
                          <li>
-                              <a href="html/jedzenie.html"> JEDENIE NA TELEFON </a>
+                              <a href="jedzenie.html"> JEDENIE NA TELEFON </a>
                          </li>
                          <li>
-                              <a href="html/reklama.html"> REKLAMA </a>
+                              <a href="reklama.html"> REKLAMA </a>
                          </li>
                          <li>
-                              <a href="html/kontakt.html"> KONTAKT </a>
+                              <a href="kontakt.html"> KONTAKT </a>
                          </li>
                     </ul>
                </div>
@@ -206,8 +206,8 @@
 
                                    <div class="categories">
                                         <div class="c_cat">
-                                          <a href="html/patrol.html" class="cat_patrol">PATROL</a>
-                                          <a href="html/atrakcje.html" class="cat_atrakcje">ATRAKCJE</a>
+                                          <a href="patrol.html" class="cat_patrol">PATROL</a>
+                                          <a href="atrakcje.html" class="cat_atrakcje">ATRAKCJE</a>
                                         </div>
                           
                                       </div>
